--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       box-sizing: border-box;
       background-size: cover;
       background-position: center;
-      background-color: white;
+     
       background-repeat: no-repeat;
         font-family:Calibri;
   font-size:20px; 
@@ -165,9 +165,9 @@
         FIELD PROGRAM DASHBOARD
       </div>
     </div>
-    <!--<div style="background-image: url(Images/backgroundimage.png);height: auto;
+    <div style="background-image: url(Images/background1.png);height: auto;
     
-     background-size: cover;">-->
+     background-size: cover;">
     <div class="link-group" >
       <div class="group-name">PHASE I</div>
       <div class="link-group-list">
