--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       font-weight: bold;
       margin-bottom: 10px;
       padding-top: 15px;
-        color:darkblue;
+        color:Black;
         font-family:"Times New Roman", Times, serif;
   font-size:20px;
     }
@@ -91,7 +91,7 @@
       align-items: center;
       padding:20px;
       text-decoration: none;
-      color: darkblue;
+      color: Black;
       box-sizing: border-box;
       background-size: cover;
       background-position: center;
@@ -165,7 +165,7 @@
         FIELD PROGRAM DASHBOARD
       </div>
     </div>
-    <div style="background-image: url(Images/background1.png);height: auto;
+    <div style="background-image: url(Images/Background1.png);height: auto;
     
      background-size: cover;">
     <div class="link-group" >
