--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
     <div class="link-group" >
       <div class="group-name">PHASE II</div>
       <div class="link-group-list">
+         <a href=" https://docs.google.com/forms/d/e/1FAIpQLScN9b-vdnUAVlADG2iWxlvm00lAAXuZjsanU3_GxcVE9ZekcA/viewform target="_blank">
+          <img src="Images/Patient register details.png"
+            alt="Consent Form" >
+         Consent form
+        </a>
         <a href=" https://docs.google.com/forms/d/e/1FAIpQLSdeoHaS08c4p9uXv0u93fRkl8PghrX9nndAd4nAeQ2qlfujjw/viewform" target="_blank">
           <img src="Images/Patient register details.png"
             alt="Patient register details" >
