--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="link-group" >
       <div class="group-name">PHASE II</div>
       <div class="link-group-list">
-         <a href=" https://docs.google.com/forms/d/e/1FAIpQLScN9b-vdnUAVlADG2iWxlvm00lAAXuZjsanU3_GxcVE9ZekcA/viewform target="_blank">
+         <a href=" https://docs.google.com/forms/d/e/1FAIpQLScN9b-vdnUAVlADG2iWxlvm00lAAXuZjsanU3_GxcVE9ZekcA/viewform" target="_blank">
           <img src="Images/FRO_Productivity_Icon.png"
             alt="Consent Form" >
          Consent form
