--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="favicon.ico" type="Images/x-icon">
+  <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
   <title>PHIMED</title>
   <style>
     body {
